change background, fix horizontal scrolling, remove unnecessary vertical line in nav bar

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Body
 $body-bg-color-fallback: #444749;
-$body-bg: linear-gradient(135deg, #222 0%, #444 36%, #111 100%);
+$body-bg: linear-gradient(135deg, #300 0%, #030 50%, #006 100%);
 
 // Links
 $link-color: #93c;
